# aml-spaceflight

./: .dockerignore  Dockerfile  pyproject.toml
conf/base/: azureml.yml  catalog.yml
src/: requirements.txt
src/spaceflights/pipelines/data_processing/: pipeline.py
