[tool.kedro]
package_name = "spaceflights"
project_name = "Spaceflights"
project_version = "0.18.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/spaceflights -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry.dependencies]
kedro-azureml = { path = "/home/azureuser/cloudfiles/code/Users/flow.roessler/git/kedro-azureml", develop = true, extras = ["mlflow"]}